# poster-design

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  deploy.sh  docker-compose.yml  项目说明.md
back_end/: Dockerfile  oss.py  poster_gen.py  process_psd_layers.py  pyproject.toml  remove_bg.py  requirements.txt
back_end/app/: config.py  main.py
back_end/app/api/: cutout.py  files.py  materials.py  poster.py  psd.py  templates.py
back_end/app/services/: psd_service.py
back_end/app/utils/: psd_utils.py
back_end/data/: poster.sqlite
front_end/: index.html  package-lock.json  package.json  tsconfig.json
front_end/docker/web/: static.conf
front_end/service/: package-lock.json  package.json
front_end/service/src/service/: design.ts  files.ts  user.ts
front_end/service/src/utils/: fs.ts
front_end/src/: config.ts
front_end/src/api/: cutout.ts  home.ts  index.ts  material.ts  poster.ts  psd.ts
front_end/src/assets/data/: 1.json  WidgetClassifyList.ts  poster_templates.json
front_end/src/components/: PSDUploader.vue
front_end/src/components/business/qrcode/: index.vue  method.ts
front_end/src/components/business/save-download/: CreateCover.vue
front_end/src/components/common/ProgressLoading/: index.vue
front_end/src/languages/modules/zh/: header.ts
front_end/src/router/: base.ts
front_end/src/store/base/: index.ts
front_end/src/utils/plugins/: eventBus.ts
front_end/src/utils/widgets/: elementConfig.ts
front_end/src/views/: Index.vue  PosterGenerate.vue  Psd.vue
front_end/src/views/components/: HeaderOptions.vue  Tour.vue  Watermark.vue
(+8 files in other folders)
