[project]
name = "poster-design-backend"
version = "0.1.0"
description = "Poster Design API backend (FastAPI + PSD processing)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "poster-design" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "psd-tools>=1.10,<2.0",
  "pytesseract>=0.3.13,<1.0",
  "opencv-python-headless>=4.10,<5.0",
  "numpy>=2.1,<3.0",
  "python-dotenv>=1.0.1,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "Pillow>=10.4,<12.0",
  "volcengine>=1.0.206",
  "requests>=2.32,<3.0",
  "pandas>=2.2,<3.0",
  "tqdm>=4.66,<5.0",
  "esdk-obs-python>=3.22,<4.0",
  "rembg>=2.0.50,<3.0",
]

[tool.uv]
dev-dependencies = []
